Changes to 0.4 - released 2011/5/13

Change: When using the "Expire remote caches", the default is now to purge urls
    for all nodes whose view cache is cleared (taking into account standard view
    cache expiry rules and smart vie cache).
    The olde behaviour (purging remote urls only for nodes corresponding to current
    object) can be restored via a setting in ezworkflowcollection.ini