@@ -5,3 +5,6 @@ Change: When using the "Expire remote caches", the default is now to purge urls
     cache expiry rules and smart vie cache).
     The olde behaviour (purging remote urls only for nodes corresponding to current
     object) can be restored via a setting in ezworkflowcollection.ini
+
+Bugfix: the schema creation script for oracle would not work
+
